--- a/lista.html
+++ b/lista.html
@@ -9,6 +9,13 @@
 <body>
   <div class="container">
     <h1>Contactos Registrados</h1>
+    
+    <div class="selector-container">
+        <label id="nombre-aleatorio" class="nombre-label">Haz clic para seleccionar un nombre al azar</label>
+        <button onclick="mostrarNombreAleatorio()">Elegir al Azar</button>
+    </div>
+      
+
     <table id="tabla-contactos">
       <thead>
         <tr>
