--- a/index.html
+++ b/index.html
@@ -1,29 +1,70 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Registro de Asistentes</title>
-  <link rel="stylesheet" href="estilos.css">
+  <link rel="stylesheet" href="estilos.css" />
 </head>
 <body>
   <div class="form-container">
     <h2>Registro de Asistentes</h2>
-    <form action="#" method="POST">
+    <form id="form-contacto">
       <label for="nombre">Nombre</label>
-      <input type="text" id="nombre" name="nombre" required>
+      <input type="text" id="nombre" name="nombre" required />
 
       <label for="telefono">Teléfono</label>
-      <input type="tel" id="telefono" name="telefono" required>
+      <input type="tel" id="telefono" name="telefono" required />
 
       <label for="correo">Correo</label>
-      <input type="email" id="correo" name="correo" required>
+      <input type="email" id="correo" name="correo" required />
 
       <label for="rut">RUT</label>
-      <input type="text" id="rut" name="rut" required>
+      <input type="text" id="rut" name="rut" required />
 
       <button type="submit">Enviar</button>
     </form>
+
+    <p id="mensaje" style="text-align: center; margin-top: 10px;"></p>
   </div>
+
+  <script>
+    document.getElementById("form-contacto").addEventListener("submit", async function (e) {
+      e.preventDefault();
+
+      const nombre = document.getElementById("nombre").value.trim();
+      const telefono = document.getElementById("telefono").value.trim();
+      const correo = document.getElementById("correo").value.trim();
+      const rut = document.getElementById("rut").value.trim();
+
+      const datos = { nombre, telefono, correo, rut };
+
+      try {
+        const res = await fetch("https://api-swa.onrender.com/nuevoasistente", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify(datos),
+        });
+
+        const resultado = await res.json();
+
+        if (res.ok) {
+          document.getElementById("mensaje").textContent = "✅ Registro exitoso";
+          document.getElementById("mensaje").style.color = "green";
+          document.getElementById("form-contacto").reset();
+        } else {
+          document.getElementById("mensaje").textContent = "❌ Error al registrar";
+          document.getElementById("mensaje").style.color = "red";
+          console.error("Error del servidor:", resultado);
+        }
+      } catch (error) {
+        document.getElementById("mensaje").textContent = "❌ Error de conexión";
+        document.getElementById("mensaje").style.color = "red";
+        console.error("Error:", error);
+      }
+    });
+  </script>
 </body>
 </html>
