--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="form-container">
-    <h2>Registro de Asistentes</h2>
+    <h2>Registro de Asistente</h2>
     <form id="form-contacto">
       <label for="nombre">Nombre</label>
       <input type="text" id="nombre" name="nombre" required />
