--- a/index.html
+++ b/index.html
@@ -19,9 +19,6 @@
       <label for="correo">Correo</label>
       <input type="email" id="correo" name="correo" required />
 
-      <label for="rut">RUT</label>
-      <input type="text" id="rut" name="rut" required />
-
       <button type="submit">Enviar</button>
     </form>
 
@@ -35,9 +32,8 @@
       const nombre = document.getElementById("nombre").value.trim();
       const telefono = document.getElementById("telefono").value.trim();
       const correo = document.getElementById("correo").value.trim();
-      const rut = document.getElementById("rut").value.trim();
 
-      const datos = { nombre, telefono, correo, rut };
+      const datos = { nombre, telefono, correo };
 
       try {
         const res = await fetch("https://api-swa.onrender.com/nuevoasistente", {
